//*****************************************************************************
/// \copyright (c) 2018,2018 by Seidenader Maschinenbau GmbH
/// \file SVRC.proto
/// All Rights Reserved
//*****************************************************************************
/// Protobuf file for all SVRC commands
//******************************************************************************

syntax = "proto3";
package SvPb;

option java_package = "de.sdm.svrc.proto.v1010";

import "SVRC-SVOGateway.proto";
import "SVRC-SVObserver.proto";
import "SVRC-UserManagement.proto";
import "BasicStructure.proto";
import "ConfigCommands.proto";
import "GetObjectSelector.proto";
import "InspectionCommands.proto";

/// This is the list of all request and response messages for SVRC
message SVRCMessages
{
	oneof message
	{
		/// The first parameter is the message type which is declared in this file below the second parameter is the variable
		/// General commands
		StandardResponse standardResponse = 1;
		NamesResponse namesResponse = 2;
		GetGatewayVersionRequest getGatewayVersionRequest = 3;
		GetSVObserverVersionRequest getSVObserverVersionRequest = 4;
		GetVersionResponse getVersionResponse = 5;
		EmptyResponse emptyResponse = 6;

		//SVGateway commands
		QueryListNameRequest queryListNameRequest = 1000;
		QueryListNameResponse queryListNameResponse = 1001;
		QueryListItemRequest queryListItemRequest = 1002;
		QueryListItemResponse queryListItemResponse = 1003;
		GetProductRequest getProductRequest = 1004;
		GetProductResponse getProductResponse = 1005;
		GetImageFromIdRequest getImageFromIdRequest = 1006;
		GetImageFromIdResponse getImageFromIdResponse = 1007;
		GetFailStatusRequest getFailStatusRequest = 1010;
		GetFailStatusResponse getFailStatusResponse = 1011;
		GetTriggerItemsRequest getTriggerItemsRequest = 1012;
		GetTriggerItemsResponse getTriggerItemsResponse = 1013;
		GetGatewayNotificationStreamRequest getGatewayNotificationStreamRequest = 1015;
		GetGatewayNotificationStreamResponse getGatewayNotificationStreamResponse = 1016;
		GetRejectRequest getRejectRequest = 1017;
		GetRejectResponse getRejectResponse = 1018;
		GetProductStreamRequest getProductStreamRequest = 1021;
		GetProductStreamResponse getProductStreamResponse = 1022;
		StoreClientLogsRequest storeClientLogsRequest = 1023;
		GetInspectionsRequest getInspectionsRequest = 1024;
		GetInspectionsResponse getInspectionsResponse = 1025;
		SetRejectStreamPauseStateRequest setRejectStreamPauseStateRequest = 1026;
		GetWebAppVersionRequest getWebAppVersionRequest = 1027;
		GetProductDataRequest getProductDataRequest = 1028;
		GetProductDataResponse getProductDataResponse = 1029;
		GetGatewayMessageStreamRequest getGatewayMessageStreamRequest = 1030;
		GetGatewayMessageStreamResponse getGatewayMessageStreamResponse = 1031;

		//SVObserver commands
		SetDeviceModeRequest setDeviceModeRequest = 2000;
		GetDeviceModeRequest getDeviceModeRequest = 2001;
		GetDeviceModeResponse getDeviceModeResponse = 2002;
		GetStateRequest getStateRequest = 2003;
		GetStateResponse getStateResponse = 2004;
		GetConfigRequest getConfigRequest = 2005;
		GetConfigResponse getConfigResponse = 2006;
		PutConfigRequest putConfigRequest = 2007;
		GetOfflineCountRequest getOfflineCountRequest = 2008;
		GetOfflineCountResponse getOfflineCountResponse = 2009;
		ActivateMonitorListRequest activateMonitorListRequest = 2010;
		SetProductFilterRequest setProductFilterRequest = 2011;
		GetProductFilterRequest getProductFilterRequest = 2012;
		GetProductFilterResponse getProductFilterResponse = 2013;
		GetItemsRequest getItemsRequest = 2014;
		GetItemsResponse getItemsResponse = 2015;
		SetItemsRequest setItemsRequest = 2016;
		SetItemsResponse setItemsResponse = 2017;
		GetFileRequest getFileRequest = 2018;
		GetFileResponse getFileResponse = 2019;
		PutFileRequest putFileRequest = 2020;
		RegisterMonitorListRequest registerMonitorListRequest = 2021;
		RegisterMonitorListResponse registerMonitorListResponse = 2022;
		GetInspectionNamesRequest getInspectionNamesRequest = 2023;
		ShutdownRequest shutdownRequest = 2024;
		GetMonitorListPropertiesRequest getMonitorListPropertiesRequest = 2025;
		GetMonitorListPropertiesResponse getMonitorListPropertiesResponse = 2026;
		GetMaxRejectDepthRequest getMaxRejectDepthRequest = 2027;
		GetMaxRejectDepthResponse getMaxRejectDepthResponse = 2028;
		GetConfigReportRequest getConfigReportRequest = 2029;
		GetConfigReportResponse getConfigReportResponse = 2030;
		GetDataDefinitionListRequest getDataDefinitionListRequest = 2031;
		GetDataDefinitionListResponse getDataDefinitionListResponse = 2032;
		QueryMonitorListRequest queryMonitorListRequest = 2033;
		QueryMonitorListNamesRequest queryMonitorListNamesRequest = 2034;
		RunOnceRequest runOnceRequest = 2035;
		LoadConfigRequest loadConfigRequest = 2036;
		GetObjectSelectorItemsRequest getObjectSelectorItemsRequest = 2037;
		GetObjectSelectorItemsResponse getObjectSelectorItemsResponse = 2038;
		GetTriggerStreamRequest getTriggerStreamRequest = 2039;
		GetTriggerStreamResponse getTriggerStreamResponse = 2040;
		GetNotificationStreamRequest getNotificationStreamRequest = 2041;
		GetNotificationStreamResponse getNotificationStreamResponse = 2042;
		InspectionCmdRequest inspectionCmdRequest = 2043;
		InspectionCmdResponse inspectionCmdResponse = 2044;
		GetConfigurationTreeRequest getConfigurationTreeRequest = 2045;
		GetConfigurationTreeResponse getConfigurationTreeResponse = 2046;
		ConfigCommandRequest configCommandRequest = 2047;
		ConfigCommandResponse configCommandResponse = 2048;
		SetTriggerConfigRequest setTriggerConfigRequest = 2049;
		GetConfigurationInfoRequest getConfigurationInfoRequest = 2050;
		GetConfigurationInfoResponse getConfigurationInfoResponse = 2051;
		GetMessageStreamRequest getMessageStreamRequest = 2052;
		GetMessageStreamResponse getMessageStreamResponse = 2053;
		SoftwareTriggerRequest softwareTriggerRequest = 2054;

		// User Management Commands
		GetMyPermissionsRequest getMyPermissionsRequest = 3000;
		GetMyPermissionsResponse getMyPermissionsResponse = 3001;
		GetGroupDetailsRequest getGroupDetailsRequest = 3002;
		GetGroupDetailsResponse getGroupDetailsResponse = 3003;
		UpdateGroupPermissionsRequest updateGroupPermissionsRequest = 3004;
		UpdateGroupPermissionsResponse updateGroupPermissionsResponse = 3005;
	}
}

message GetVersionResponse
{
	string version = 1;				//The version number as string
}

// Intentionally left blank.
message EmptyResponse
{
}
